# AI-Agent-Observatory-House

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_EXTENDED.md  LICENSE  README.md  api_v1_organizations.py  conftest.py  deps.py  docker-compose.dev.yml  docker-compose.yml  email.py  m5-m6-org-rbac.md  main.py  schemas_organizations.py  test_org_endpoints.py  token_store.py
backend/: Dockerfile  fix_team_tmp.py  insp_real_tmp.py  insp_team_tmp.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_provider_credentials.py  0003_agent_schema.py  0004_add_hitl_tool_names.py  0005_add_test_tables.py  0006_add_gemini_provider.py  0007_agents_gemini_provider.py  0008_conversations.py  0009_agent_file_system.py  0010_agent_knowledge.py  0011_test_trajectory_cost.py  0012_test_judges.py  0013_test_consistency.py  0014_custom_provider.py  0015_suite_kpis.py  0016_ab_experiments.py  0017_scenario_steps.py  0018_http_agent.py  0019_mcp_servers.py  0020_agent_teams.py  0021_service_connections.py  0022_custom_tools.py  0023_team_conversations.py  0024_team_budgets.py  0025_notification_channels.py  0026_agent_prompt_versions.py  0027_db_connections.py  0028_github_connections.py  0029_team_knowledge.py  0030_team_msg_payload.py  0031_notifications_feed.py  0032_team_files.py  0033_workflows.py  0034_drop_workflows.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: clickhouse.py  config.py  database.py  email.py  encryption.py  redis.py  responses.py
backend/app/middleware/: __init__.py  auth.py
backend/app/models/: __init__.py  agent.py  agent_file.py  agent_knowledge.py  agent_prompt_version.py  auth.py  connection.py  conversation.py  custom_tool.py  db_connection.py  github_connection.py  mcp.py  notification.py  notification_feed.py  organization.py  provider.py  team.py  team_file.py  team_knowledge.py  test_suite.py  user.py  workflow.py
backend/app/schemas/: agents.py  auth.py  conversations.py  custom_tools.py  knowledge.py  mcp.py  providers.py  teams.py  test_suites.py  traces.py  workflows.py
backend/app/services/: auth_context.py  hitl.py  jwt_service.py  password_service.py  pricing.py  token_store.py  trace_collector.py  trace_consumer.py
backend/app/ws/: team_runs.py  test_runs.py  traces.py
backend/tests/integration/: auth_helpers.py  conftest.py  test_agent_execution.py  test_agent_files.py  test_agent_knowledge.py  test_auth_flow.py  test_connections.py  test_conversations.py  test_custom_tools.py  test_db_connections.py  test_github_connections.py  test_hitl_flow.py  test_m4_auth_flow.py  test_mcp_endpoints.py  test_migrations.py  test_notification_channels.py  test_org_endpoints.py  test_prompt_versions.py  test_provider_endpoints.py  test_teams.py  test_test_runner.py  test_trace_flow.py
backend/tests/unit/: test_agent_engine.py  test_agent_stats.py  test_ask_user.py  test_assertions_extended.py  test_custom_tools.py  test_dataset.py  test_encryption.py  test_excel_export.py  test_finance.py  test_gmail.py  test_google_workspace.py  test_hitl.py  test_judge.py  test_kpi_catalog.py  test_m11_test_core.py  test_m12_research_tools.py  test_m3_services.py  test_m4_services.py  test_mcp.py  test_mcp_registry.py  test_models.py  (+18 more)
(+208 files in other folders)
