[project]
name = "observatory"
version = "0.1.0"
description = "AI Agent Observatory — Multi-tenant agent testing and observability platform"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Redis
    "redis[hiredis]>=5.0.0",

    # ClickHouse
    "clickhouse-connect>=0.7.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "argon2-cffi>=23.1.0",
    "python-multipart>=0.0.9",

    # Validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "email-validator>=2.2.0",

    # Email
    "resend>=2.0.0",

    # HTTP client
    "httpx>=0.27.0",

    # LLM providers
    "openai>=1.40.0",
    "anthropic>=0.34.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-postgresql>=6.0.0",
    "fakeredis>=2.24.0",
    "respx>=0.21.0",
    "factory-boy>=3.3.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
